--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -4,6 +4,7 @@
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486089.md#1" target="_blank">田云：推特涉嫌干预美大选 言论审查水多深？</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486089.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/24902f38edac31c9-150x120.jpg" align ="left"></a>科技巨头竟然大搞言论审查，美版404的背后有哪些因素作怪？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 4:29 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486027.md#1" target="_blank">丑闻爆发前 脸书推特高层加入拜登竞选团队</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486027.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228999788-150x120.jpg" align ="left"></a>《纽约邮报》日前登出民主党候选人拜登父的贪腐丑闻，不过立即遭到脸书（Facebook）和推特（Twitter）以“等候事实查核”为由的直接封锁，此事也让拜登竞选团队与科技巨头的深厚关系浮上台面，引起网路上许多批评。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 4:19 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485477.md#1" target="_blank">中共外交官闯台外馆国庆酒会打伤人 台抗议</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485477.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/06/fe83448f748c2ea6be9a1ab534a9a78a-150x120.jpg" align ="left"></a>中华民国国庆是10月10日，外媒报导，台湾驻斐济代表处8日举行国庆酒会，遭中共大使馆人员硬闯入还打伤人。对此，外交部19日强烈谴责中共挑衅的战狼外交做法。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 2:00 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485538.md#1" target="_blank">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485538.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/Biden-and-Trump-700x420-150x120.jpg" align ="left"></a>拜登悬了？左派计划暴动。中共五中全会或震荡。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 1:48 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482137.md#1" target="_blank">【最新疫情10.19】川普：勿忘病毒来自中国</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482137.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/464745-150x120.jpg" align ="left"></a>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 1:37 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485442.md#1" target="_blank">华为大势已去？跨大西洋联盟打造清洁网络</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485442.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8T3938-1-150x120.jpg" align ="left"></a>美国禁令使华为芯片断供，使其高端手机发展受重创；美国国务院更是在全球范围内推广“清洁网络”计划。10月17日，国务院发表声明，介绍跨大西洋联盟打造干净网络详细情况，透露华为在欧洲大势已去的局面。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 11:31 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485256.md#1" target="_blank">川普抵加州橙县 上万选民海陆两地欢迎</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485256.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/2-5-1-150x120.jpg" align ="left"></a>2020年10月18日（周日），美国总统川普（特朗普）抵达加州橙县的新港海滩市（Newport Beach）参加了一场私人筹款活动。当天，道路两旁有上万名加州选民挥舞着“Trump 2020”等旗帜、海上更有选民驾驶游艇，共同欢迎川普。他们高喊“Four more years”（再干四年），力挺他连任成功。川普随后也在社交媒体上发视频回应加州选民的热情。
@@ -41,6 +42,5 @@ WHO：欧洲某些地区的重症监护病房近满员
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483499.md#1" target="_blank">美ICE今秋第二轮行动 逮捕176在逃非法移民</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483499.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-945287254-150x120.jpg" align ="left"></a>美国移民和海关执法局（ICE）机构周四（10月15日）宣布，已在全国范围内逮捕了一百七十多名在逃的非法移民，重点是针对避难所城市的非法移民逃犯。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 7:03 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12474852.md#1" target="_blank">【内幕】吉林省应对美中贸易战措施曝光</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12474852.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-943543340-1-600x400-150x120.jpg" align ="left"></a>美中关系持续恶化，美国接连出手制裁中共。近日，大纪元获得的中共内部文件显示，在2018年3月美中贸易战爆发后，吉林当局就中美贸易摩擦的问题，提出了应对措施。分析认为，这些都是泛泛之词。中共应对美中贸易战并无好的办法。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 6:56 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483240.md#1" target="_blank">iPhone 12大陆预售抢崩官网 破“抵制”假象</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483240.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/bb75016513fee7066871bfee881060fc-150x120.jpg" align ="left"></a>iPhone 12在中国大陆开启预售后，热情的买家一度挤崩苹果官网，几大电商平台瞬间售罄。虽然中共外交部发言人赵立坚曾扬言“苹果手机我们也可以不用”，抖音、微博等平台也出现大量抵制iPhone、支持华为的声音，但iPhone 12被疯抢体现出真实民意。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 2:58 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485538.md#1" target="_blank">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br></h3>拜登悬了？左派计划暴动。中共五中全会或震荡。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 1:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
