--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -253,7 +253,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/9/n10131106.md#1" target="_blank">林辉：北京四中老师们健忘背后的残酷真相</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238642.md#1" target="_blank">晓明：文革中广西204地质勘探队惨绝人寰的凶杀案</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/5/n11501516.md#1" target="_blank">欧洲千人法会 西方法轮功学员谈修炼感悟</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
