--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -1,23 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oqzulz329/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oqzulz329/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oqzulz329/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情10.19】川普：勿忘病毒来自中国</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/464745-600x400.jpg" />
-<h6>美国总统川普可说是近40年来对中共立场最强硬的总统。（ Joe Raedle/Getty Images）
+<tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情10.19】全球病例突破4000万大关</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1228568126-600x400.jpg" />
+<h6>2020年9月17日，巴西帕拉（Para）州的拜克索康汀斯（Baixo Tocantins），政府卫生工作者在的伊加拉佩·米里（Igarape-Miri）的穆鲁蒂普库河（Murutipucu River）的河滨社区为一名做中共病毒测试。 （Photo by TARSO SARRAF / AFP）
 </h6>
 <hr>
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/oqzulz329/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101912">专家：接下来6至12周是大流行最黑暗时期</a></strong><br />
+<p><strong><ahref="#_Toc2020101913">全球病例突破4000万大关</a></strong><br />
+<strong><ahref="#_Toc2020101912">专家：接下来6至12周是大流行最黑暗时期</a></strong><br />
 <strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong><br />
 <strong><ahref="#_Toc2020101910">全球病例数突破4千万 死亡逾111万</a></strong><br />
 <strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong><br />
 <strong><ahref="#_Toc2020101908">美国南部州经济复苏快</a></strong><br />
 <strong><ahref="#_Toc2020101907">欧洲多地爆发抵制防疫措施抗议活动</a></strong><br />
 <strong><ahref="#_Toc2020101906">南非卫生部长病毒测试呈阳性</a></strong><br />
-<strong><ahref="#_Toc2020101904">IMF：全面封锁可能性较小</a></strong><br />
-<strong><ahref="#_Toc2020101903">疫情导致加拿大人口增长停滞</a></strong></p>
+<strong><ahref="#_Toc2020101904">IMF：全面封锁可能性较小</a></strong></p>
 <p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月18日下午1时，全球确诊感染<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数已突破4,000万，死亡人数超过111万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。周日意大利新增病例达11,705，创下纪录，重症室人数也是10天前的2倍。国际货币基金组织表示，全面封锁的可能性不大。</p>
@@ -26,21 +26,37 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<p><a name="_Toc2020101913"></a></p>
+<h3>全球病例突破4000万大关</h3>
+<figure id="attachment_12434612" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1228152528.jpg"><img class="size-large wp-image-12434612" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1228152528-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年8月22日，印度首都新德里的一家火化厂，亲戚们看着身穿防护服的工人准备将死于中共病毒的患者尸体进行火化。（Xavier GALIANA / AFP）</figcaption></figure>
+<p>周一（10月19日），全球中共病毒病例超过了4000万；北半球的冬季来临加剧了病毒的蔓延。</p>
+<p>约翰霍普金斯大学的数据显示，截至美东时间周一上午9：30，全球的中共病毒病例的总数达到了40,122,835例，死亡人数为1,114,857人。</p>
+<p>专家认为，鉴于测试不足??和某些国家可能未充分报告的情况，病例和死亡的真实数字可能要高得多。</p>
+<p>路透社报导，大流行病的蔓延速度在继续加快。从全球3000万例病例到4000万例，只用了32天，而从2000万增加到3000万例则用了38天，1000万到2000万之间用了44天，而自1月初在中国武汉报导第一例病例以来，到1000万例共用了三个月时间。。</p>
+<p>上周末，全球中共病毒新感染病例有创纪录的一天内超过40万。</p>
+<p>在过去的一周中，每天平均有大约347,000例病例，而10月第一周则为292,000例。</p>
+<p>美国、印度和巴西仍然是世界上受中共病毒影响最严重的国家。北美、中美洲和南美洲的COVID-19病例约占全球病例的47.27％或近一半。</p>
+<p>&nbsp;</p>
+<p>欧洲的新病例每天增长超过15万，因为意大利、荷兰、德国、奥地利、波兰、乌克兰、塞浦路斯和捷克共和国等许多国家/地区报告的感染每天都在创历史新高的增加。</p>
+<p>欧洲目前占全球病例的17％以上，而与该病毒有关的死亡人数占全球的22％。</p>
+<p>&nbsp;</p>
+<p>自大流行开始以来，已有超过110万人死于COVID-19，全球病死率徘徊在总病例的2.8％左右。</p>
+<p>（注：因中共和伊朗隐瞒疫情数据，其真实数据比统计的要高，因此排名没有将其计算在内。）</p>
 <h3>葡萄牙病例总数突破10万</h3>
 <p>葡萄牙周一（19日）报告了1,949例新增病例，这是该国连续第12天新增病例超过一千。</p>
 <p>迄今，在这个拥有一千万人口的国家，病例总数已突破10万。</p>
 <blockquote class="twitter-tweet">
-<p lang="ca" dir="ltr">Portugal surpasses 100,000 total Covid-19 cases <ahref="https://t.co/1pf3jEyqVy">https://t.co/1pf3jEyqVy</a></p>
-<p>&mdash; Sue Stone (@knittingknots) <ahref="https://twitter.com/knittingknots/status/1318192843622653953?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
-<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+<p dir="ltr" lang="ca">Portugal surpasses 100,000 total Covid-19 cases <ahref="https://t.co/1pf3jEyqVy">https://t.co/1pf3jEyqVy</a></p>
+<p>— Sue Stone (@knittingknots) <ahref="https://twitter.com/knittingknots/status/1318192843622653953?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 葡萄牙卫生部门还报告，过去24小时内新增17人死亡。至今已有2,198人染疫身亡。</p>
 <h3>美21州新病例数稳定 27个州上升 两州下降</h3>
 <p>美国<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>数据显示，有21个州新增病例数呈稳定趋势，两个州呈下降趋势，27个州呈上升趋势。</p>
 <p>约翰·霍普金斯大学（Johns Hopkins University）的数据显示，截至周一（19日）早晨，美国确诊病例总数已超过800万，死亡人数超过21.9万。</p>
 <p>与前一周相比，有两个州新增病例数呈下降趋势。这两个州是夏威夷和佛蒙特州。</p>
-<p>有27个州新增病例数呈上升趋势，21个州呈稳定趋势。<br />
-<figure id="attachment_12486900" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1281080591-e1603117438230.jpg"><img src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1281080591-e1603117438230.jpg" alt="" width="600" b="400" class="size-full wp-image-12486900" /></a><figcaption class="wp-caption-text">10月19日，佛州迈阿密选民戴着口罩排队，等着进行早期投票。(Joe Raedle/Getty Images)<br /></figcaption></figure><br />
-尽管全美各地病例数正在上升，但首席传染病专家安东尼·福奇说，实行全国封锁并不是前进之路，除非大流行变得“真的很糟”。</p>
+<p>有27个州新增病例数呈上升趋势，21个州呈稳定趋势。</p>
+<figure id="attachment_12486900" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1281080591-e1603117438230.jpg"><img class="size-full wp-image-12486900" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1281080591-e1603117438230.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">10月19日，佛州迈阿密选民戴着口罩排队，等着进行早期投票。(Joe Raedle/Getty Images)</figcaption></figure>
+<p>尽管全美各地病例数正在上升，但首席传染病专家安东尼·福奇说，实行全国封锁并不是前进之路，除非大流行变得“真的很糟”。</p>
 <p>他上周日（18日）在受访中告诉CBS首席医学记者拉普克（Jonathan LaPook），疲惫的美国公众应该将公共卫生措施视为安全地保持开放的一种方式。</p>
 <p>专家说，美国人通过听从官员几个月来倡导的指导方针，可以帮助控制病毒。这些指导方针包括避免置身于拥挤的环境、保持距离，户外仅举行小型聚会和戴口罩。</p>
 <h3>疫情致空中旅行停滞以来 TSA单日筛查人数首破百万</h3>
@@ -51,17 +67,17 @@
 <h3>专家：接下来6至12周将是大流行最黑暗时期</h3>
 <p>上周日（18日），美国明尼苏达大学传染病研究与政策中心主任奥斯特霍姆（Michael Osterholm）在NBC节目“与媒体见面”中警告，“接下来的6至12周将是整个大流行最黑暗的时期”。</p>
 <blockquote class="twitter-tweet">
-<p lang="en" dir="ltr">Top infectious disease expert says &#39;the next 6 to 12 weeks are going to be the darkest of the entire pandemic&#39; <ahref="https://t.co/bLbN6rWaab">https://t.co/bLbN6rWaab</a></p>
-<p>&mdash; Insider News (@insidernews) <ahref="https://twitter.com/insidernews/status/1317927795700518914?ref_src=twsrc%5Etfw">October 18, 2020</a></p></blockquote>
-<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+<p dir="ltr" lang="en">Top infectious disease expert says &#8216;the next 6 to 12 weeks are going to be the darkest of the entire pandemic&#8217; <ahref="https://t.co/bLbN6rWaab">https://t.co/bLbN6rWaab</a></p>
+<p>— Insider News (@insidernews) <ahref="https://twitter.com/insidernews/status/1317927795700518914?ref_src=twsrc%5Etfw">October 18, 2020</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 奥斯特霍姆告诉该节目主持人查克·托德（Chuck Todd），尽管取得了一些进展，但“疫苗要到明年第三季度才能以任何有意义的方式提供。”</p>
 <p>奥斯特霍姆在节目中还表示： “我们确实有疫苗和治疗方法，但接下来的6到12周将是整个大流行病最黑暗的时期。”</p>
 <h3>英国博尔顿女议员染疫住院</h3>
 <p>英国大曼彻斯特地区博尔顿议会工党女议员亚斯敏·库雷希（Yasmin Qureshi），因感染了中共病毒而住进医院。</p>
 <blockquote class="twitter-tweet">
-<p lang="en" dir="ltr">EXCLUSIVE: Manchester MP Yasmin Qureshi Hospitalised With Covid <ahref="https://t.co/sC8QbIXifN">https://t.co/sC8QbIXifN</a> <ahref="https://t.co/9zWqMsHWD4"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="9zWqMsHWD4</a></p>
-<p>&mdash; Guido Fawkes (@GuidoFawkes) <ahref="https://twitter.com/GuidoFawkes/status/1318123551539531777?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
-<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+<p dir="ltr" lang="en">EXCLUSIVE: Manchester MP Yasmin Qureshi Hospitalised With Covid <ahref="https://t.co/sC8QbIXifN">https://t.co/sC8QbIXifN</a> <ahref="https://t.co/9zWqMsHWD4"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="9zWqMsHWD4</a></p>
+<p>— Guido Fawkes (@GuidoFawkes) <ahref="https://twitter.com/GuidoFawkes/status/1318123551539531777?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 库雷希周一（19日）在社交媒体上发布声明说，她两周前就开始感到自己病了，随后被确诊感染了中共病毒。上周六病情恶化后，她因肺炎住进医院。</p>
 <p><a name="_Toc2020101911"></a></p>
 <h3>比利时警告：疫情已失控 “海啸”逼近</h3>
@@ -69,9 +85,9 @@
 <p>美联社报导，新措施旨在限制社交互动，以减缓感染数的指数级增长。新出现的病例激增已促使多家医院推迟非必要的手术，以专注于治疗染疫患者。</p>
 <p>卫生部长弗兰克·范登布鲁克（Frank Vandenbroucke）上周日（18日）对广播公司RTL说：“我们真的非常接近于疫情海啸。我们已经控制不住正在发生的事情。”</p>
 <blockquote class="twitter-tweet">
-<p lang="en" dir="ltr">We are really very close to a tsunami. We no longer control what is happening &#8211; Belgian health minister<ahref="https://t.co/El1b3BTOZe">https://t.co/El1b3BTOZe</a></p>
-<p>&mdash; Anu Sieberk (@AnuSieberk) <ahref="https://twitter.com/AnuSieberk/status/1317863445597949953?ref_src=twsrc%5Etfw">October 18, 2020</a></p></blockquote>
-<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+<p dir="ltr" lang="en">We are really very close to a tsunami. We no longer control what is happening &#8211; Belgian health minister<ahref="https://t.co/El1b3BTOZe">https://t.co/El1b3BTOZe</a></p>
+<p>— Anu Sieberk (@AnuSieberk) <ahref="https://twitter.com/AnuSieberk/status/1317863445597949953?ref_src=twsrc%5Etfw">October 18, 2020</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 根据欧洲疾病预防控制中心的数据，在过去14天内，比利时记录了每10万人中超过700人感染，是欧洲第二糟糕记录，仅次于捷克的即每10万人中828人感染。</p>
 <h3>瑞士新增近9千例确诊</h3>
 <p>瑞士上周末报告了8,737例新增病例。</p>
@@ -81,9 +97,9 @@
 <p>波兰政府周一（19日）表示，该国将在华沙国家体育场开设一家临时医院，以缓解病例激增给医疗系统造成的压力。这是该国第一座治疗中共病毒患者的战地医院。</p>
 <p>这座医院将设在华沙国家体育场的会议室内，初期可容纳500名染疫患者。 据政府说，可能会扩充到最多容纳1000张病床。</p>
 <blockquote class="twitter-tweet">
-<p lang="en" dir="ltr">Poland to convert stadium into its first coronavirus field hospital<ahref="https://twitter.com/hashtag/218newsenglish?src=hash&amp;ref_src=twsrc%5Etfw">#218newsenglish</a> <ahref="https://twitter.com/hashtag/coronavirus?src=hash&amp;ref_src=twsrc%5Etfw">#coronavirus</a> <ahref="https://twitter.com/hashtag/Poland?src=hash&amp;ref_src=twsrc%5Etfw">#Poland</a> <ahref="https://twitter.com/hashtag/Libya?src=hash&amp;ref_src=twsrc%5Etfw">#Libya</a> <ahref="https://t.co/QWjYSgBxTV"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="QWjYSgBxTV</a></p>
-<p>&mdash; 218newsenglish (@218newsenglish) <ahref="https://twitter.com/218newsenglish/status/1318151597264953347?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
-<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+<p dir="ltr" lang="en">Poland to convert stadium into its first coronavirus field hospital<ahref="https://twitter.com/hashtag/218newsenglish?src=hash&amp;ref_src=twsrc%5Etfw">#218newsenglish</a> <ahref="https://twitter.com/hashtag/coronavirus?src=hash&amp;ref_src=twsrc%5Etfw">#coronavirus</a> <ahref="https://twitter.com/hashtag/Poland?src=hash&amp;ref_src=twsrc%5Etfw">#Poland</a> <ahref="https://twitter.com/hashtag/Libya?src=hash&amp;ref_src=twsrc%5Etfw">#Libya</a> <ahref="https://t.co/QWjYSgBxTV"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="QWjYSgBxTV</a></p>
+<p>— 218newsenglish (@218newsenglish) <ahref="https://twitter.com/218newsenglish/status/1318151597264953347?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 波兰上周五（16日）报告新增132人死亡，创下自大流行开始以来单日最高纪录。</p>
 <p>根据约翰·霍普金斯大学（Johns Hopkins University）的数据，迄今波兰已录得175,766例确诊病例、3,573例死亡病例。</p>
 <h3>单日感染数稳步上升 奥地利限制聚会人数</h3>
@@ -92,9 +108,9 @@
 <h3>比利时实行宵禁 瑞士强制戴口罩</h3>
 <p>比利时从周一（19日）开始实行全国性夜间宵禁。瑞士已规定在室内公共场所必须戴口罩。这些是欧洲国家为遏制猛烈的第二波疫情而采取的最新措施。</p>
 <blockquote class="twitter-tweet">
-<p lang="en" dir="ltr">Belgium imposes a nationwide overnight curfew as Switzerland makes wearing face masks compulsory in indoor public spaces, the latest desperate measures by European governments to fight a powerful second coronavirus wave <ahref="https://t.co/W8jH35auaT">https://t.co/W8jH35auaT</a> <ahref="https://t.co/uqKKECf7eU"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="uqKKECf7eU</a></p>
-<p>&mdash; AFP news agency (@AFP) <ahref="https://twitter.com/AFP/status/1318084466120687617?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
-<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+<p dir="ltr" lang="en">Belgium imposes a nationwide overnight curfew as Switzerland makes wearing face masks compulsory in indoor public spaces, the latest desperate measures by European governments to fight a powerful second coronavirus wave <ahref="https://t.co/W8jH35auaT">https://t.co/W8jH35auaT</a> <ahref="https://t.co/uqKKECf7eU"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="uqKKECf7eU</a></p>
+<p>— AFP news agency (@AFP) <ahref="https://twitter.com/AFP/status/1318084466120687617?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 欧洲已有超过25万人丧生。那里日益加剧的危机与澳洲形成了对比。澳洲第二大城市已开始放宽封锁。这种封锁曾使数以百万计的人基本上被限制在家中数月之久。</p>
 <p>比利时在应对本国病例激增之际，全国的咖啡馆和餐馆关闭了4个星期。该国病例激增是全欧洲感染激增的一部分。过去一周来，整个欧洲的病例数激增了44％。</p>
 <p><a name="_Toc2020101910"></a></p>
@@ -109,9 +125,9 @@
 <h3>俄新增病例激增至近1.6万例 再创单日新高</h3>
 <p>俄罗斯官方的数据显示，周一（19日）该国单日新增病例激增至新高，达15,982例，其中包括首都莫斯科的5,376例，全国病例总数达到 1,415,316例。</p>
 <blockquote class="twitter-tweet">
-<p lang="en" dir="ltr"><ahref="https://twitter.com/hashtag/BREAKING?src=hash&amp;ref_src=twsrc%5Etfw">#BREAKING</a> Russia confirmed 15,982 new Covid-19 cases Monday, bringing its official number of cases to 1,415,316 and breaking the country&#39;s record for new infections <ahref="https://t.co/1wwxiGFit7">https://t.co/1wwxiGFit7</a></p>
-<p>&mdash; The Moscow Times (@MoscowTimes) <ahref="https://twitter.com/MoscowTimes/status/1318095204835012609?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
-<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+<p dir="ltr" lang="en"><ahref="https://twitter.com/hashtag/BREAKING?src=hash&amp;ref_src=twsrc%5Etfw">#BREAKING</a> Russia confirmed 15,982 new Covid-19 cases Monday, bringing its official number of cases to 1,415,316 and breaking the country&#8217;s record for new infections <ahref="https://t.co/1wwxiGFit7">https://t.co/1wwxiGFit7</a></p>
+<p>— The Moscow Times (@MoscowTimes) <ahref="https://twitter.com/MoscowTimes/status/1318095204835012609?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 当局报告在过去24小时内新增179人死亡。至此，官方报告的死亡总数达到24,366人。</p>
 <h3>莱德斯罗杯橄榄球赛 超过4.6万名新西兰球迷入场观赛</h3>
 <p>在周日（10月18日）橄榄球布莱德斯罗杯（Bledisloe Cup）的第二场比赛中，新西兰队以27比7击败澳大利亚队。这场比赛的伊甸园球场出现了近乎满员的46,049名观众，这在2020年中是个不寻常的景象。</p>
@@ -121,12 +137,12 @@
 <p>奥克兰的Covid-19限制措施在8月小范围爆发中共病毒病例后重新进入封锁状态，在本月初被解除，允许人群返回体育场。</p>
 <p>伊甸园公园（Eden Park）是世界上为数不多的运动场之一，在周末举办了一场近乎满员赛事。</p>
 <p>新西兰全黑队自2003年以来一直保持着这项赛事冠军。</p>
-<figure id="attachment_12486116" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1280873737.jpg"><img src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1280873737-600x400.jpg" alt="" width="600" b="400" class="size-large wp-image-12486116" /></a><figcaption class="wp-caption-text">图为2020年10月18日在新西兰奥克兰伊甸园公园举行的Bledisloe Cup比赛中，新西兰全黑队与澳大利亚袋鼠队于赛中争夺。(Photo by Anthony Au-Yeung/Getty Images)</figcaption></figure>
+<figure id="attachment_12486116" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1280873737.jpg"><img class="size-large wp-image-12486116" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1280873737-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">图为2020年10月18日在新西兰奥克兰伊甸园公园举行的Bledisloe Cup比赛中，新西兰全黑队与澳大利亚袋鼠队于赛中争夺。(Photo by Anthony Au-Yeung/Getty Images)</figcaption></figure>
 <h3>国泰航空今年前9个月载客量同比下降83%</h3>
 <p>总部位于香港的国泰航空周一发布公告，2020年前9个月，搭乘国泰航空的乘客数量较去年同期下降了83.2%。</p>
 <p>国泰航空的首席客户和商务官罗纳德·林（Ronald Lam）表示，他预计国泰航空在2020年余下的时间里，将以大流行病之前的客运航班运力的10%左右运营，明年全年的运力将低于50%。</p>
 <p>他说：“我们假设明年上半年的运营能力将远低于大流行病之前的运力的四分之一，但在下半年将会看到复苏——只是假设目前正在开发的疫苗被证明是有效的，并在2021年夏季之前被我们的主要市场广泛采用。”</p>
-<figure id="attachment_6162846" style="width: 444px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2008/05/805310647011164.jpg"><img src="https://i.epochtimes.com/assets/uploads/2008/05/805310647011164.jpg" alt="" width="444" b="594" class="size-full wp-image-6162846" /></a><figcaption class="wp-caption-text">香港机场的国泰航空公司（Cathay Pacific Airways）班机 (JEWEL SAMAD/AFP/Getty Images)</figcaption></figure>
+<figure id="attachment_6162846" style="width: 444px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2008/05/805310647011164.jpg"><img class="size-full wp-image-6162846" src="https://i.epochtimes.com/assets/uploads/2008/05/805310647011164.jpg" alt="" width="444" b="594" /></a><figcaption class="wp-caption-text">香港机场的国泰航空公司（Cathay Pacific Airways）班机 (JEWEL SAMAD/AFP/Getty Images)</figcaption></figure>
 <h3>美国周日新增48210例Covid-19病例</h3>
 <p>根据约翰-霍普金斯大学的数据，美国周日共诊断出48210例新的Covid-19病例，同时还报告新增388例与该病毒相关的死亡病例。</p>
 <p>根据该大学的统计，自疫情爆发以来，目前全美至少有8,154,594个感染Covid-19病例，以及至少有219,674人死亡。</p>
@@ -253,7 +269,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/1/n9793368.md#1" target="_blank">你不了解的邓小平：与毛一同指挥大跃进（上）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11648921.md#1" target="_blank">林辉：国家足球队头号前锋文革缘何自杀？</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10746220.md#1" target="_blank">觅真：真诚的感恩浸透着民心所向</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -280,6 +296,6 @@
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483851.md#1">意大利小镇仅住2人 但坚持戴口罩保持距离</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/17/n12482137.htm">【最新疫情10.19】川普：勿忘病毒来自中国</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/17/n12482137.htm">【最新疫情10.19】全球病例突破4000万大关</a></p><hr>
 
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482137.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
